-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.5.0-rc1
Steps to reproduce:
- Create a new Qt Quick Application
- Open MainForm.ui.qml
- In the Navigator select any item and select "Go to Implementation"
Actual behaviour:
This jumps to main.qml to the MainForm item
Expected behaviour:
Jump to the actual item in MainForm.ui.qml in text display
OR
The action is disabled.
| For Gerrit Dashboard: QTCREATORBUG-14815 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 149940,4 | QmlDesigner: Improving gotoImplementation | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |