QmlDesigner: Improving gotoImplementation

The designer will now jump to an existing signal handler.
If no signal handler does exist a dialog that allows to
add a new one is opened.

Task-number: QTCREATORBUG-14815
Change-Id: Iefdbec0aa8c2aeca95a0eb4c6b24d84adc357654
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>